<?xml version="1.0"?>
<package format="3">
  <name>amsl_navigation_utils</name>
  <version>0.0.0</version>
  <description>The amsl_navigation_utils package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_conversions</depend>

  <build_depend>ndt_omp</build_depend>
  <build_depend>amsl_navigation_msgs</build_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>

  <export>
  </export>
</package>
